adjust page title

--- a/app/src/main/res/layout/fragment_landing_page.xml
+++ b/app/src/main/res/layout/fragment_landing_page.xml
@@ -6,6 +6,7 @@
         android:background="@color/blue"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".LandingPageFragment">
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/landing_heading_ll"
         android:layout_width="match_parent"
@@ -15,25 +16,27 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
         <TextView
             android:id="@+id/landing_signOut_tv"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Sign Out"
+            android:text="@string/sign_out_str"
             android:visibility="invisible"
             android:gravity="start|center"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:layout_weight="1"/>
+
         <TextView
             android:id="@+id/landing_title_tv"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="ACCESS MOVIES"
+            android:text="@string/access_movies_str"
             android:gravity="center"
             android:textColor="@color/orange"
             android:textStyle="bold"
-            android:textSize="35sp"
+            android:textSize="25sp"
             android:layout_weight="1"/>
         <TextView
             android:id="@+id/landing_SignIn_tv"
@@ -52,7 +55,7 @@
         android:layout_height="50dp"
         android:src="@drawable/ic_add"
         android:visibility="invisible"
-        android:paddingEnd="10dp"
+       android:layout_marginEnd="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/landing_heading_ll"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/landing_heading_ll" />
