--- a/app/src/main/res/layout/item_movies.xml
+++ b/app/src/main/res/layout/item_movies.xml
@@ -40,6 +40,7 @@
                             android:id="@+id/item_movie_genre_placeholder"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="5dp"
                             android:layout_marginTop="20dp"
                             android:text="@string/genre_str_item"
                             android:textSize="16sp"
@@ -84,7 +85,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="20dp"
-                            android:paddingStart="5dp"
+                            android:layout_marginStart="5dp"
                             android:text="@string/rating_str_item"
                             android:textSize="16sp"
                             app:layout_constraintStart_toStartOf="@+id/item_movie_genre_placeholder"
