--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -111,17 +111,31 @@
         app:layout_constraintStart_toStartOf="@+id/logIn_background_vw"
         app:layout_constraintTop_toBottomOf="@+id/logIn_formBackground_vw" />
 
-    <TextView
-        android:id="@+id/login_signUp_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/logIn_signup_btn"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
         android:layout_marginTop="20dp"
         android:text="Create New Account"
-        android:textColor="@color/white"
         android:textSize="20sp"
+        app:backgroundTint="@color/blue"
+        app:cornerRadius="20dp"
+        android:layout_marginHorizontal="40dp"
         app:layout_constraintEnd_toEndOf="@+id/logIn_background_vw"
         app:layout_constraintStart_toStartOf="@+id/logIn_background_vw"
         app:layout_constraintTop_toBottomOf="@+id/logIn_logIn_btn" />
+
+<!--    <TextView-->
+<!--        android:id="@+id/login_signUp_tv"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:text="Create New Account"-->
+<!--        android:textColor="@color/white"-->
+<!--        android:textSize="20sp"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/logIn_background_vw"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/logIn_background_vw"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/logIn_logIn_btn" />-->
 
     <ProgressBar
         android:id="@+id/logIn_progressBar_pb"
@@ -132,6 +146,6 @@
         app:layout_constraintBottom_toBottomOf="@+id/logIn_background_vw"
         app:layout_constraintEnd_toEndOf="@+id/logIn_background_vw"
         app:layout_constraintStart_toStartOf="@+id/logIn_background_vw"
-        app:layout_constraintTop_toBottomOf="@+id/login_signUp_tv" />
+        app:layout_constraintTop_toBottomOf="@+id/logIn_signup_btn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
