--- a/app/src/main/res/layout/fragment_add_movie.xml
+++ b/app/src/main/res/layout/fragment_add_movie.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent">
 
 <androidx.constraintlayout.widget.ConstraintLayout
-
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".AddMovieFragment">
@@ -62,7 +61,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_title_et" />
 
-    <EditText
+    <Spinner
         android:id="@+id/fragment_add_movie_ratings_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -80,7 +79,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_genre_et" />
 
-    <EditText
+    <Spinner
         android:id="@+id/fragment_add_movie_country_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -145,7 +144,12 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
-        android:inputType="text"
+        android:inputType="textMultiLine"
+        android:lines="6"
+        android:minLines="2"
+        android:gravity="top|start"
+        android:maxLines="10"
+        android:scrollbars="vertical"
         android:background="@drawable/add_movie_button_border"
         android:hint="@string/description_str"
         android:paddingTop="20dp"
@@ -157,22 +161,109 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_ticket_price_et" />
 
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/checkbox_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/fragment_add_movie_up_photo_btn"
+        app:layout_constraintTop_toBottomOf="@id/fragment_add_movie_description">
+
+        <TextView
+            android:id="@+id/fragment_add_movie_genre_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/select_genre_str"
+            android:textSize="25sp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <CheckBox
+            android:id="@+id/fragment_add_movie_genre_action"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/action_str"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_genre_header" />
+
+        <CheckBox
+            android:id="@+id/fragment_add_movie_genre_comedy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/comedy_str"
+            app:layout_constraintStart_toEndOf="@+id/fragment_add_movie_genre_action"
+            app:layout_constraintTop_toTopOf="@+id/fragment_add_movie_genre_action" />
+
+
+        <CheckBox
+            android:id="@+id/fragment_add_movie_genre_Drama"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/drama_str"
+            app:layout_constraintStart_toEndOf="@+id/fragment_add_movie_genre_comedy"
+            app:layout_constraintTop_toTopOf="@+id/fragment_add_movie_genre_comedy" />
+
+        <CheckBox
+            android:id="@+id/fragment_add_movie_genre_fantasy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fantasy_str"
+            app:layout_constraintStart_toEndOf="@+id/fragment_add_movie_genre_Drama"
+            app:layout_constraintTop_toTopOf="@+id/fragment_add_movie_genre_Drama" />
+
+        <CheckBox
+            android:id="@+id/fragment_add_movie_genre_horror"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/horror_str"
+            app:layout_constraintTop_toTopOf="@id/fragment_add_movie_genre_fantasy"
+            app:layout_constraintStart_toEndOf="@id/fragment_add_movie_genre_fantasy"
+            />
+
+        <CheckBox
+            android:id="@+id/fragment_add_movie_genre_mystery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/mystery_str"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/fragment_add_movie_genre_action" />
+
+        <CheckBox
+            android:id="@+id/fragment_add_movie_genre_romance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/romance_str"
+            app:layout_constraintStart_toEndOf="@+id/fragment_add_movie_genre_mystery"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_genre_action" />
+
+        <CheckBox
+            android:id="@+id/fragment_add_movie_genre_thriller"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/thriller_str"
+            app:layout_constraintStart_toEndOf="@+id/fragment_add_movie_genre_romance"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_genre_comedy" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <Button
         android:id="@+id/fragment_add_movie_up_photo_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="28dp"
+        android:background="@drawable/custom_button_outline_bg"
         android:paddingStart="20dp"
         android:paddingTop="10dp"
         android:paddingEnd="20dp"
         android:paddingBottom="10dp"
         android:text="@string/add_photo_str"
-        android:textColor="@color/orange"
-        android:background="@drawable/custom_button_outline_bg"
         android:textAllCaps="false"
+        android:textColor="@color/orange"
+        app:layout_constraintTop_toBottomOf="@+id/checkbox_parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_description" />
+        tools:layout_editor_absoluteY="688dp" />
 
     <Button
         android:id="@+id/fragment_add_movie_add_image_btn"
@@ -193,6 +284,8 @@
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_up_photo_btn" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
