--- a/app/src/main/res/layout/fragment_add_movie.xml
+++ b/app/src/main/res/layout/fragment_add_movie.xml
@@ -173,17 +173,19 @@
             android:id="@+id/fragment_add_movie_genre_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="24dp"
             android:text="@string/select_genre_str"
-            android:textSize="25sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <CheckBox
             android:id="@+id/fragment_add_movie_genre_action"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/action_str"
+            android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_genre_header" />
 
@@ -225,6 +227,7 @@
             android:id="@+id/fragment_add_movie_genre_mystery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:text="@string/mystery_str"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fragment_add_movie_genre_action" />
@@ -252,7 +255,8 @@
         android:id="@+id/fragment_add_movie_up_photo_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/custom_button_outline_bg"
         android:paddingStart="20dp"
         android:paddingTop="10dp"
@@ -261,9 +265,8 @@
         android:text="@string/add_photo_str"
         android:textAllCaps="false"
         android:textColor="@color/orange"
-        app:layout_constraintTop_toBottomOf="@+id/checkbox_parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="688dp" />
+        app:layout_constraintTop_toBottomOf="@+id/checkbox_parent" />
 
     <Button
         android:id="@+id/fragment_add_movie_add_image_btn"
