--- a/app/src/main/res/layout/fragment_add_movie.xml
+++ b/app/src/main/res/layout/fragment_add_movie.xml
@@ -9,7 +9,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".AddMovieFragment">
+        tools:context=".ui.addmovie.AddMovieFragment">
 
     <!--    Tool bar -->
     <include
@@ -42,42 +42,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_toolbar" />
 
-    <EditText
-        android:id="@+id/fragment_add_movie_genre_et"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
-        android:inputType="text"
-        android:background="@drawable/add_movie_button_border"
-        android:hint="@string/genre_str"
-        android:paddingTop="20dp"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:paddingBottom="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_title_et" />
 
     <Spinner
         android:id="@+id/fragment_add_movie_ratings_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/add_movie_button_border"
         android:hint="@string/rating_str"
-        android:paddingTop="20dp"
         android:paddingStart="8dp"
+        android:paddingTop="20dp"
         android:paddingEnd="8dp"
         android:paddingBottom="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_genre_et" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_title_et" />
 
     <Spinner
         android:id="@+id/fragment_add_movie_country_et"
@@ -122,7 +104,7 @@
         android:id="@+id/fragment_add_movie_ticket_price_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"
+        android:inputType="number"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
