--- a/app/src/main/res/layout/fragment_landing_page.xml
+++ b/app/src/main/res/layout/fragment_landing_page.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
         android:background="@color/blue"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".LandingPageFragment">
+    tools:context=".ui.home.LandingPageFragment">
+
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/landing_heading_ll"
@@ -26,6 +27,7 @@
             android:gravity="start|center"
             android:textColor="@color/white"
             android:textSize="16sp"
+            android:paddingStart="10dp"
             android:layout_weight="1"/>
 
         <TextView
@@ -46,6 +48,7 @@
             android:gravity="end|center"
             android:textColor="@color/white"
             android:textSize="16sp"
+            android:paddingEnd="10dp"
             android:layout_weight="1"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -55,11 +58,10 @@
         android:layout_height="50dp"
         android:src="@drawable/ic_add"
         android:visibility="invisible"
-       android:layout_marginEnd="10dp"
+        android:layout_marginEnd="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/landing_heading_ll"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/landing_heading_ll"
         app:layout_constraintTop_toTopOf="@+id/landing_heading_ll" />
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
