--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,13 +8,13 @@
 
     <fragment
         android:id="@+id/landingPage"
-        android:name="com.decadevs.accessmovies.LandingPageFragment"
+        android:name="com.decadevs.accessmovies.ui.home.LandingPageFragment"
         android:label="Movie"
         tools:layout="@layout/fragment_landing_page" />
 
     <fragment
             android:id="@+id/addMovieFragment"
-            android:name="com.decadevs.accessmovies.AddMovieFragment"
+            android:name="com.decadevs.accessmovies.ui.addmovie.AddMovieFragment"
             android:label="Add Image"
             tools:layout="@layout/fragment_add_movie" />
     <fragment
