landing page ui completed

--- a/app/src/main/res/layout/item_movies.xml
+++ b/app/src/main/res/layout/item_movies.xml
@@ -49,32 +49,33 @@
 
                         <TextView
                             android:id="@+id/item_movie_title"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
+                            android:layout_marginEnd="5dp"
                             android:layout_marginTop="10dp"
                             android:ellipsize="end"
-                            android:maxLines="1"
+                            android:maxLines="2"
                             android:paddingStart="10dp"
                             android:paddingEnd="10dp"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
                             android:textStyle="bold"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.0"
                             app:layout_constraintStart_toEndOf="@+id/item_movie_image"
                             app:layout_constraintTop_toTopOf="@+id/item_movie_image"
                             tools:text="Avengers" />
 
                         <TextView
                             android:id="@+id/item_movie_genre"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:paddingStart="10dp"
                             android:paddingEnd="10dp"
                             android:textColor="@android:color/black"
                             android:textSize="14sp"
                             app:layout_constraintBottom_toBottomOf="@+id/item_movie_genre_placeholder"
+                            app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/item_movie_genre_placeholder"
                             app:layout_constraintTop_toTopOf="@+id/item_movie_genre_placeholder"
                             app:layout_constraintVertical_bias="1.0"
@@ -93,13 +94,14 @@
 
                         <TextView
                             android:id="@+id/item_movie_rating"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:paddingStart="10dp"
                             android:paddingEnd="10dp"
                             android:textColor="@android:color/black"
                             android:textSize="14sp"
                             app:layout_constraintBottom_toBottomOf="@+id/item_movie_rating_placeholder"
+                            app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/item_movie_rating_placeholder"
                             app:layout_constraintTop_toTopOf="@+id/item_movie_rating_placeholder"
                             tools:text="Release Date: 16 Feb 2018" />
