--- a/app/src/main/res/layout/item_movies.xml
+++ b/app/src/main/res/layout/item_movies.xml
@@ -58,7 +58,7 @@
                             android:maxLines="2"
                             android:paddingStart="10dp"
                             android:paddingEnd="10dp"
-                            android:textColor="@android:color/black"
+                            android:textColor="@color/blue"
                             android:textSize="18sp"
                             android:textStyle="bold"
                             app:layout_constraintEnd_toEndOf="parent"
