--- a/app/src/main/res/layout/fragment_add_movie.xml
+++ b/app/src/main/res/layout/fragment_add_movie.xml
@@ -24,6 +24,20 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="180dp"
+        android:layout_height="300dp"
+
+        >
+
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+    <ImageView
+        android:id="@+id/imgView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
     <EditText
         android:id="@+id/fragment_add_movie_title_et"
         android:layout_width="match_parent"
