--- a/app/src/main/res/layout/fragment_moviedetails.xml
+++ b/app/src/main/res/layout/fragment_moviedetails.xml
@@ -243,15 +243,22 @@
             <EditText
                 android:id="@+id/movie_comment_et"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="wrap_content"
+                android:minHeight="50dp"
+                android:layout_marginHorizontal="10dp"
                 android:autofillHints="Enter Comment"
                 android:inputType="textMultiLine" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/movie_comment_submit_button"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Comment" />
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="20dp"
+                android:paddingHorizontal="5dp"
+                android:backgroundTint="@color/blue"
+                app:cornerRadius="20dp"
+                android:text="Comment"
+                android:textSize="20sp"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
