--- a/app/src/main/res/layout/fragment_moviedetails.xml
+++ b/app/src/main/res/layout/fragment_moviedetails.xml
@@ -159,7 +159,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:text="Nov. 2020"
+                        android:text="2020"
                         android:textColor="@color/white"
                         android:textSize="25sp" />
 
