--- a/app/src/main/res/layout/fragment_moviedetails.xml
+++ b/app/src/main/res/layout/fragment_moviedetails.xml
@@ -15,6 +15,7 @@
         android:theme="@style/ThemeOverlay.MaterialComponents.Dark">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/fragment_movie_details_collapsingToolBar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
@@ -92,7 +93,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center_horizontal"
-                        android:text="5.0"
+                        android:text="@string/_5_0"
                         android:textColor="@color/white"
                         android:textSize="25sp" />
 
@@ -102,7 +103,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center_horizontal"
-                        android:text="Ratings"
+                        android:text="@string/ratings"
                         android:textColor="@color/blue"
                         android:textSize="15sp"
                         android:textStyle="bold" />
@@ -126,7 +127,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="Nigeria"
+                        android:text="@string/nigeria"
                         android:textColor="@color/white"
                         android:textSize="25sp" />
 
@@ -136,7 +137,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center_horizontal"
-                        android:text="Country"
+                        android:text="@string/country"
                         android:textColor="@color/blue"
                         android:textSize="15sp"
                         android:textStyle="bold" />
@@ -159,7 +160,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:text="2020"
+                        android:text="@string/year"
                         android:textColor="@color/white"
                         android:textSize="25sp" />
 
@@ -168,7 +169,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:text="Release Date"
+                        android:text="@string/release_date"
                         android:textColor="@color/blue"
                         android:textSize="15sp"
                         android:textStyle="bold" />
@@ -187,7 +188,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:paddingStart="10dp"
-                    android:text="Genres: "
+                    android:text="@string/genres"
                     android:textColor="@color/blue"
                     android:textSize="20sp"
                     android:textStyle="bold" />
@@ -198,7 +199,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:paddingStart="10dp"
-                    android:text="Action"
+                    android:text="@string/action"
                     android:textSize="15sp"
                     android:textStyle="normal" />
             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -209,7 +210,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:paddingStart="10dp"
-                android:text="Desciption: "
+                android:text="@string/desciption"
                 android:textColor="@color/blue"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -228,7 +229,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="10dp"
-                android:text="Comments: "
+                android:text="@string/comments"
                 android:textColor="@color/blue"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -257,7 +258,7 @@
                 android:paddingHorizontal="5dp"
                 android:backgroundTint="@color/blue"
                 app:cornerRadius="20dp"
-                android:text="Comment"
+                android:text="@string/comment"
                 android:textSize="20sp"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.core.widget.NestedScrollView>
