--- a/app/src/main/res/layout/item_movies.xml
+++ b/app/src/main/res/layout/item_movies.xml
@@ -59,7 +59,7 @@
                             android:paddingStart="10dp"
                             android:paddingEnd="10dp"
                             android:textColor="@color/blue"
-                            android:textSize="18sp"
+                            android:textSize="25sp"
                             android:textStyle="bold"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/item_movie_image"
@@ -73,7 +73,7 @@
                             android:paddingStart="10dp"
                             android:paddingEnd="10dp"
                             android:textColor="@android:color/black"
-                            android:textSize="14sp"
+                            android:textSize="18sp"
                             app:layout_constraintBottom_toBottomOf="@+id/item_movie_genre_placeholder"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/item_movie_genre_placeholder"
@@ -86,7 +86,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="20dp"
-                            android:layout_marginStart="5dp"
                             android:text="@string/rating_str_item"
                             android:textSize="16sp"
                             app:layout_constraintStart_toStartOf="@+id/item_movie_genre_placeholder"
@@ -99,11 +98,13 @@
                             android:paddingStart="10dp"
                             android:paddingEnd="10dp"
                             android:textColor="@android:color/black"
-                            android:textSize="14sp"
+                            android:textSize="18sp"
                             app:layout_constraintBottom_toBottomOf="@+id/item_movie_rating_placeholder"
                             app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="1.0"
                             app:layout_constraintStart_toEndOf="@+id/item_movie_rating_placeholder"
                             app:layout_constraintTop_toTopOf="@+id/item_movie_rating_placeholder"
+                            app:layout_constraintVertical_bias="0.0"
                             tools:text="Release Date: 16 Feb 2018" />
 
                         <TextView
@@ -126,7 +127,7 @@
                             android:textSize="18sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="@+id/guideline"
-                            tools:text="Ticket price" />
+                            tools:text="200" />
 
                         <androidx.constraintlayout.widget.Guideline
                             android:id="@+id/guideline"
