--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/comment_item"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/comment_item"
     android:layout_width="match_parent"
-    android:layout_marginBottom="4dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="4dp">
 
     <LinearLayout
         android:layout_width="0dp"
@@ -19,16 +18,16 @@
             android:id="@+id/comment_name_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
+            android:text="@string/comment_name"
             android:textColor="@color/black"
-            android:text="@string/comment_name" />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/comment_body_text"
             android:layout_width="match_parent"
-            android:textStyle="italic"
-            android:textColor="@android:color/black"
             android:layout_height="wrap_content"
-            android:text="@string/comment_body" />
+            android:text="@string/comment_body"
+            android:textColor="@android:color/black"
+            android:textStyle="italic" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
