--- a/app/src/main/res/drawable/movie_item_background.xml
+++ b/app/src/main/res/drawable/movie_item_background.xml
@@ -7,7 +7,9 @@
                 android:endColor="@color/pink"
                 android:angle="360"
                 />
-            <corners android:radius="10dp"/>
+            <corners android:bottomRightRadius="50dp"
+                android:bottomLeftRadius="50dp"
+                />
         </shape>
     </item>
 </selector>
