--- a/app/src/main/res/layout/fragment_moviedetails.xml
+++ b/app/src/main/res/layout/fragment_moviedetails.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -68,7 +70,7 @@
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:background="@drawable/movie_details_background"
+                android:background="@drawable/movie_item_background"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:paddingStart="10dp"
@@ -230,6 +232,7 @@
                 android:layout_height="wrap_content"
                 android:paddingStart="10dp"
                 android:text="@string/comments"
+                android:layout_marginBottom="5dp"
                 android:textColor="@color/blue"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -239,7 +242,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
-                android:paddingStart="10dp" />
+                android:paddingStart="10dp"
+                tools:listitem="@layout/comment_item"
+                />
 
             <EditText
                 android:id="@+id/movie_comment_et"
