--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -27,6 +27,7 @@
             android:layout_marginBottom="5dp"
             android:paddingStart="5dp"
             android:paddingEnd="5dp"
+            android:textColor="@color/black"
             android:text="@string/daniel_str"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -39,6 +40,7 @@
             android:layout_height="wrap_content"
             android:paddingStart="5dp"
             android:paddingEnd="5dp"
+            android:textColor="@color/black"
             android:text="@string/omo_this_movie_dope_die_str"
             app:layout_constraintStart_toStartOf="@+id/comment_name_text"
             app:layout_constraintTop_toBottomOf="@+id/comment_name_text" />
